extends Control

func _on_save_button_down():
	pass


func _on_load_button_down():
	pass # Replace with function body.


func _on_backlog_button_down():
	pass # Replace with function body.


func _on_options_button_down():
	pass # Replace with function body.


func _on_exit_button_down():
	get_tree().quit()
